--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
 .appContainer {
   display: flex;
   flex-direction: "row";
-  background-color: greenyellow;
-  height: 100vh;
+  background-color: #5f9ea0;
+  min-height: 100vh;
 }
