--- a/src/components/product-listings.module.css
+++ b/src/components/product-listings.module.css
@@ -4,4 +4,8 @@
   background-color: white;
   padding: 10px;
   border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
